Pricing bases for slots and contracts. First cut
Needs: migration, feature